# basic_ml

./: CMakeLists.txt  README.md
app/: simple.cc  xor.cc
include/: activations.hpp  layer.hpp  matrix.hpp  network.hpp  random.hpp
src/: activations.cc  layer.cc  matrix.cc  network.cc  random.cc
